<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/ic_logo_white"
        android:tint="@color/yellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_120sdp"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/awesome"
            android:textColor="@color/purple"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />


        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/you_are_all_set_up_with_your_account_lets_get_start"
            android:textColor="@color/yellow_700"
            android:textSize="@dimen/_18sdp" />


        <Button
            android:id="@+id/btnLetsGo"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/drawable_yellow_button"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="center"
            android:text="@string/lets_go" />

    </LinearLayout>
</LinearLayout>