<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/yellow_700"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_10sdp"
    app:cardPreventCornerOverlap="false"
    android:layout_margin="@dimen/_10sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAlertMessage"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_6sdp"
            android:singleLine="false"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yes" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/no" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
